<resources>
    <string name="app_name">Dagger</string>
    <string name="albums">Albums</string>
    <string name="photos">Photos</string>
    <string name="comments">Comments</string>
    <string name="users">Users</string>
    <string name="posts">Posts</string>
    <string name="add">Add</string>
    <string name="title_activity_ad_user">AdUser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>