<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/posts"
        android:title="@string/posts"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/albums"
                android:title="@string/albums"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/photos"
                android:title="@string/photos"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/comments"
                android:title="@string/comments"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/users"
                android:title="@string/users"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <item
        android:id="@+id/addUser"
        android:title="@string/add"
        app:showAsAction="always" />
</menu>